# ytmapi_cpp

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  build.sh  ytmapi_export.cmake
cmake/: ytmapi-config.cmake.in  ytmapi_export.cmake
examples/: CMakeLists.txt  createPlaylist.cpp  delPlaylist.cpp  dislikeSong.cpp  getChanId.cpp  getPlaylistTracks.cpp  likeSong.cpp  playlists.cpp  unlikeSong.cpp
include/: utils.hpp  ytmapi.hpp
include/ytmapi/: ytmapi.hpp
src/: ytmapi.cpp
src/ytmapi/: utils.hpp  ytmapi.cpp
tests/: CMakeLists.txt  getPlaylistTracks.cpp  jsonparse.cpp  playlists.cpp
